src/elisaapplication.h
@@ -103,6 +103,7 @@ public:
     ~ElisaApplication() override;
 
     Q_INVOKABLE QAction* action(const QString& name);
+    Q_INVOKABLE const QString actionShortcut(QAction *action) const;
 
     Q_INVOKABLE QString iconName(const QIcon& icon);
 
